--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                     <span class="d-none" id="toReveal">Caselle da rivelare: </span>
                     <span id="bombsNum">
                 </div>
-                <div class="tableContainer"></div>
+                <div class="tableContainer pb-4"></div>
+                <p id="long" class="text-primary fs-4 text-center d-none">ps: long press to put a flag!</i>
+                </p>
             </div>
 
         </main>
