--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <span id="bombsNum">
                 </div>
                 <div class="tableContainer pb-4"></div>
-                <p id="long" class="text-primary fs-4 text-center d-none">ps: long press to put a flag!</i>
+                <p id="long" class="text-primary fs-4 text-center d-none">ps: long press to put a flag! v2</i>
                 </p>
             </div>
 
