add flag system on mobile

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     <select id="difficulty">
                                         <option value="10">Easy</option>
                                         <option value="14">Medium</option>
-                                        <option value="20">Hard</option>
+                                        <option value="22">Hard</option>
                                     </select>
                                     <input type="submit" value="Play">
                                 </div>
@@ -88,7 +88,7 @@
                     <span id="bombsNum">
                 </div>
                 <div class="tableContainer pb-4"></div>
-                <p id="long" class="text-primary fs-4 text-center d-none">ps: long press to put a flag! v2</i>
+                <button id="flagBtn" class="d-none btn btn-primary">Flag &#9872; </button>
                 </p>
             </div>
 
