--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
         <main>
 
-            <div class="container-lg p-5 d-flex flex-column align-items-center">
-                <p id="wannaPlay" class="text-primary fs-2 text-center">Wanna play? Click me! <br>
+            <div class="container-lg p-5 d-flex flex-column align-items-center text-center">
+                <p id="wannaPlay" class="text-primary fs-2">Wanna play? Click me! <br>
                     <i class="fa fa-arrow-down" aria-hidden="true"></i>
                 </p>
                 <img src="img/smile.png" alt="Status img" class="pb-3" id="statusImg">
