add timer in html

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                 <div class="tableContainer pb-4"></div>
                 <button id="flagBtn" class="d-none btn btn-primary">Flag &#9872; </button>
                 </p>
+                <div id="timer-wrapper" class="">
+                    <span id="timer" class="border bg-black text-danger border-danger fs-1">00:00</span>
+                </div>
             </div>
 
         </main>
