add points system

--- a/index.html
+++ b/index.html
@@ -83,16 +83,17 @@
                     <i class="fa fa-arrow-down" aria-hidden="true"></i>
                 </p>
                 <img src="img/smile.png" alt="Status img" class="pb-3" id="statusImg">
-                <div class="pb-5 fs-4 text-primary">
+                <div class="pb-4 fs-4 text-primary">
                     <span class="d-none" id="toReveal">Caselle da rivelare: </span>
                     <span id="bombsNum">
+                </div>
+                <div id="timer-wrapper" class="mb-4 d-none">
+                    <span id="timer" class="border bg-black text-danger border-danger fs-1">00:00:00</span>
                 </div>
                 <div class="tableContainer pb-4"></div>
                 <button id="flagBtn" class="d-none btn btn-primary">Flag &#9872; </button>
                 </p>
-                <div id="timer-wrapper" class="">
-                    <span id="timer" class="border bg-black text-danger border-danger fs-1">00:00</span>
-                </div>
+
             </div>
 
         </main>
