add info pop-up

--- a/index.html
+++ b/index.html
@@ -93,6 +93,57 @@
                 <div class="tableContainer pb-4"></div>
                 <button id="flagBtn" class="d-none btn btn-primary">Flag &#9872; </button>
                 </p>
+                <div id="info-wrapper" class="text-primary fs-4">
+                    <p>
+                        First time?
+                        <i class="fas fa-arrow-right"></i>
+                        <span id="info">
+                            <i class="fas fa-info-circle"></i>
+                        </span>
+                    </p>
+                </div>
+                <div id="info-layover" class="d-none">
+                    <div class="info-container">
+                        <h2 class="text-center text-danger">Regole del gioco</h2>
+                        <p class="text-start">
+                            Gentile utente ti do il benvenuto!
+                            Le regole di base del "Campo Minato" sono poche e semplici! <br>
+                            <span id="desk-ver" class="d-none d-sm-block">
+                                1. Cliccando col mouse tasto sinistro svelerai il contenuto della casella; <br>
+                                2. Cliccando col mouse tasto destro marcherai la casella con una bandierina, cliccando
+                                nuovamente la rimuoverai, ti servirà per ricordare dove ritieni ci sia una bomba; <br>
+                                3. Se sarà contenuta una bomba avrai perso e il gioco terminerà; <br>
+                                4. Se nei dintorni della casella non ci sono bombe, allora ti si sveleranno anche tutte
+                                le caselle dintorno, finché non verrà svelata almeno una cella con bombe nei dintorni.
+                                In ogni caso verranno segnati il numero di bombe adiacenti a tutte le caselle così
+                                svelate; <br>
+                                5. Se il contatore di "Caselle da svelare" arriverà a 0 avrai vinto e il gioco
+                                terminerà; <br>
+                                6. Al termine del gioco riceverai un punteggio che dipende da 3 parametri: il tempo
+                                impiegato, la difficoltà e il numero di celle svelate, più un bonus in caso di vittoria.
+                            </span>
+
+                            <span id="mobi-ver" class="d-sm-none">
+                                1. Toccando una casella in modalità "reveal" ne svelerai il contenuto; <br>
+                                2. Toccando una casella in modalità "flag" apporrai una bandierina, toccandola
+                                nuovamente la rimuoverai, ti servirà per ricordare dove ritieni ci sia una bomba; <br>
+                                3. Se sarà contenuta una bomba avrai perso e il gioco terminerà; <br>
+                                4. Se nei dintorni della casella non ci sono bombe, allora ti si sveleranno anche tutte
+                                le caselle dintorno, finché non verrà svelata almeno una cella con bombe nei dintorni.
+                                In ogni caso verranno segnati il numero di bombe adiacenti a tutte le caselle così
+                                svelate; <br>
+                                5. Se il contatore di "Caselle da svelare" arriverà a 0 avrai vinto e il gioco
+                                terminerà; <br>
+                                6. Al termine del gioco riceverai un punteggio che dipende da 3 parametri: il tempo
+                                impiegato, la difficoltà e il numero di celle svelate, più un bonus in caso di vittoria.
+                            </span>
+                        </p>
+
+                        <div id="exit">
+                            X
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
