responsive layout changes

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <p class="text-start">
                             Gentile utente ti do il benvenuto!
                             Le regole di base del "Campo Minato" sono poche e semplici! <br>
-                            <span id="desk-ver" class="d-none d-sm-block">
+                            <span id="desk-ver" class="d-none d-lg-block">
                                 1. Cliccando col mouse tasto sinistro svelerai il contenuto della casella; <br>
                                 2. Cliccando col mouse tasto destro marcherai la casella con una bandierina, cliccando
                                 nuovamente la rimuoverai, ti servirà per ricordare dove ritieni ci sia una bomba; <br>
@@ -123,7 +123,7 @@
                                 impiegato, la difficoltà e il numero di celle svelate, più un bonus in caso di vittoria.
                             </span>
 
-                            <span id="mobi-ver" class="d-sm-none">
+                            <span id="mobi-ver" class="d-lg-none">
                                 1. Toccando una casella in modalità "reveal" ne svelerai il contenuto; <br>
                                 2. Toccando una casella in modalità "flag" apporrai una bandierina, toccandola
                                 nuovamente la rimuoverai, ti servirà per ricordare dove ritieni ci sia una bomba; <br>
