--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                     <div class="logo d-flex align-items-center">
 
-                        <a href="#" class="me-3">
+                        <a href="./index.html" class="me-3">
                             <img src="img/lama.PNG" alt="My Logo">
                         </a>
 
@@ -162,6 +162,7 @@
         <script src='https://kit.fontawesome.com/b0485a66c8.js' crossorigin='anonymous'></script>
 
         <script src='js/app.js'></script>
+
 
     </body>
 
