add footer content

--- a/index.html
+++ b/index.html
@@ -150,8 +150,12 @@
         </main>
 
         <footer class="p-3">
+            Made by &copy;
             <a href="http://twitch.tv/amreallamanera" class="m-0 fw-bold">
-                Made by &copy; Amreal Lamanera Developer
+                Amreal Lamanera Developer.
+            </a>
+            Project Manager: &copy; Katana Web.
+
         </footer>
 
         <!-- Bootstrap Bundle with Popper -->
